--- a/404.html
+++ b/404.html
@@ -2,14 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Hypothetical</title>
   <base href="/hypothetical/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="styles.2367badee6ca36cb3830.bundle.css" rel="stylesheet"></head>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
+<link href="styles.38dc20015abb04087396.bundle.css" rel="stylesheet"></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.a40f8298efeee4480d31.bundle.js"></script><script type="text/javascript" src="main.9c2eb751dd79469a611f.bundle.js"></script></body>
+<script type="text/javascript" src="inline.25eba353fceb426e12c8.bundle.js"></script><script type="text/javascript" src="main.49404c00038ac3bc5522.bundle.js"></script></body>
 </html>
