--- a/404.html
+++ b/404.html
@@ -13,5 +13,15 @@
 <link href="styles.7b57bbee7867b26ac506.bundle.css" rel="stylesheet"></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.c793e0db3f4c62d861e1.bundle.js"></script><script type="text/javascript" src="main.84ec97548fbf934ac360.bundle.js"></script></body>
+<script type="text/javascript" src="inline.64867eb9319a4adf092f.bundle.js"></script><script type="text/javascript" src="main.dd95126594c367bb7f11.bundle.js"></script></body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-1394788-6', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
