--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <!--(C) 2017 Rob Chambers http://www.rdchambers.net-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Hypothetical</title>
@@ -10,10 +11,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
 <link href="styles.7b57bbee7867b26ac506.bundle.css" rel="stylesheet"></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.32bef9b27b6d837ee634.bundle.js"></script><script type="text/javascript" src="main.f7476b23c13fc5cf0034.bundle.js"></script></body>
+<a class="github-fork-ribbon" href="https://github.com/robchambers/hypothetical" title="Fork me on GitHub">Fork me on GitHub</a>
+<script type="text/javascript" src="inline.1a1f29b3a2d4e8f15643.bundle.js"></script><script type="text/javascript" src="main.a6df977d18595d822f26.bundle.js"></script></body>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
